rubocop/examples/good/style_FlipFlop.rb
# TODO: Avoid the use of flip-flops.
