rubocop/examples/bad/style_PercentLiteralDelimiters.rb
# TODO: This cop enforces the consitent useage of `%`-literal delimiters.
